Resolved overflow-x error on login page

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -51,7 +51,8 @@ html,body {
     background: url('../images/background-space.png') no-repeat center center fixed;
     background-size: cover;
     height: 100%;
-
+    margin-left: -2%;
+    margin-right: -2%;
 }
 
 .login-page h4 {
@@ -77,4 +78,8 @@ html,body {
 
 .input-code {
     width: 25%;
+}
+
+.viewRouter {
+    overflow-x: hidden;
 }
